--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -7,7 +7,6 @@
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   </head>
   <body class="p-6">
-    <!-- Navbar -->
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
     >
@@ -24,17 +23,12 @@
 
     <div class="max-w-4xl mx-auto">
       <div class="space-y-4">
+        {{range .}}
         <div class="bg-white p-4 rounded-lg shadow-md">
-          <h2 class="text-xl font-semibold">Sunday Worship</h2>
-          <p class="text-gray-600">Date: March 3, 2025</p>
-          <p class="text-gray-700">Songs: 5</p>
+          <h2 class="text-xl font-semibold">{{.Name}}</h2>
+          <p class="text-gray-600">{{.Date}}</p>
         </div>
-
-        <div class="bg-white p-4 rounded-lg shadow-md">
-          <h2 class="text-xl font-semibold">Youth Night</h2>
-          <p class="text-gray-600">Date: March 5, 2025</p>
-          <p class="text-gray-700">Songs: 3</p>
-        </div>
+        {{end}}
       </div>
     </div>
   </body>
