--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -19,7 +19,7 @@
       <h1 class="text-2xl font-bold">LyricLink</h1>
       <div class="flex items-center space-x-4">
         <a
-          class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700"
+          class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer"
           id="openModalBtn"
         >
           Add
@@ -67,13 +67,13 @@
             <button
               type="button"
               id="closeModalBtn"
-              class="px-4 py-2 bg-gray-300 rounded-md hover:bg-gray-400 transition"
+              class="px-4 py-2 bg-gray-300 rounded-md hover:bg-gray-400 transition cursor-pointer"
             >
               Cancel
             </button>
             <button
               type="submit"
-              class="px-4 py-2 bg-gray-900 text-white rounded-md hover:bg-gray-700 transition"
+              class="px-4 py-2 bg-gray-900 text-white rounded-md hover:bg-gray-700 transition cursor-pointer"
             >
               Submit
             </button>
@@ -85,10 +85,15 @@
     <div class="max-w-4xl mx-auto">
       <div class="space-y-4">
         {{range .}}
-        <div class="bg-white p-4 rounded-lg shadow-md">
-          <h2 class="text-xl font-semibold">{{.Name}}</h2>
-          <p class="text-gray-600">{{.Date}}</p>
-        </div>
+        <a href="/events/{{.ID}}">
+          <div
+            id="{{.ID}}"
+            class="bg-white p-4 rounded-lg shadow-md cursor-pointer hover:bg-gray-100 mb-4"
+          >
+            <h2 class="text-xl font-semibold">{{.Name}}</h2>
+            <p class="text-gray-600">{{.Date}}</p>
+          </div>
+        </a>
         {{end}}
       </div>
     </div>
