--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -9,7 +9,7 @@
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
     <script defer src="/static/modal.js"></script>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/events.js"></script>
   </head>
   <body class="p-6">
