--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -7,7 +7,7 @@
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/login.js"></script>
     <title>Login</title>
   </head>
