--- a/frontend/static/output.css
+++ b/frontend/static/output.css
@@ -193,11 +193,17 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
   .fixed {
     position: fixed;
   }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
+  }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
   }
   .m-auto {
     margin: auto;
