--- a/frontend/views/pc.html
+++ b/frontend/views/pc.html
@@ -7,7 +7,7 @@
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
-    <link href="../output.css" rel="stylesheet" />
+    <link href="/static/output.css" rel="stylesheet" />
     <title>PC</title>
   </head>
   <body>
