--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -8,9 +8,9 @@
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
     ></script>
-    <script defer src="/static/modal.js"></script>
+    <script defer src="/static/event.js"></script>
     <link href="/static/output.css" rel="stylesheet" />
-    <script src="/static/alpine/events.js"></script>
+    <script src="/static/alpine/songs.js"></script>
   </head>
   <body class="p-6">
     <nav
@@ -28,60 +28,102 @@
       </div>
     </nav>
 
+    <div
+      id="newSongModal"
+      x-data="newSongModalComponent"
+      class="fixed inset-0 flex items-center justify-center backdrop-blur-sm bg-white/10"
+    >
+      <div class="bg-white p-6 rounded-lg shadow-lg w-lg">
+        <h2 class="text-xl font-semibold mb-4">Add Song</h2>
+        <form @submit.prevent="querySongs">
+          <div class="w-full max-w-lg mx-auto mt-10">
+            <label for="search" class="block text-gray-700 font-medium"
+              >Search Song</label
+            >
+            <input
+              x-model="query"
+              @input="querySongs()"
+              id="search"
+              type="text"
+              placeholder="Search for a song..."
+              class="w-full px-3 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-gray-500"
+            />
+            <div
+              class="mt-2 bg-white shadow-md max-h-40 overflow-y-auto"
+              x-show="songs.length == 0 && query.length > 0"
+            >
+              <div class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
+                <p class="font-bold text-lg">Add New Song</p>
+                <p class="text-stone-800 italic">Click to add new song</p>
+              </div>
+            </div>
+            <div
+              class="mt-2 bg-white shadow-md max-h-40 overflow-y-auto"
+              x-show="songs.length > 0"
+            >
+              <template x-for="song in songs" :key="song.id">
+                <div class="px-4 py-2 hover:bg-gray-100 cursor-pointer">
+                  <p class="font-bold text-lg" x-text="song.title"></p>
+                  <p class="text-stone-800 italic" x-text="song.author"></p>
+                  <p class="text-stone-800 italic" x-text="song.themes">
+                    Themes:
+                  </p>
+                </div>
+              </template>
+            </div>
+          </div>
+          <button
+            type="submit"
+            class="px-4 py-2 bg-gray-900 text-white rounded-md hover:bg-gray-700 transition cursor-pointer"
+          >
+            Submit
+          </button>
+        </form>
+      </div>
+    </div>
+
     <div class="max-w-4xl mx-auto">
       <div class="space-y-4">
         <h1 class="font-bold text-4xl">{{.Name}}</h1>
-        <input type="date" value="{{.Date}}" />
+        <input class="cursor-pointer" type="date" value="{{.Date}}" />
       </div>
       <div class="space-y-4 mt-6 flex justify-between">
         <h2 class="font-bold text-3xl">Songs</h2>
-        <p>+</p>
+        <a class="cursor-pointer">+</a>
       </div>
-      <div class="mt-6 hover:bg-gray-100">
-        <h2 class="font-bold text-xl">All Glory Be To Christ</h2>
-        <hr class="font-bold" />
-      </div>
-      <div class="mt-6 hover:bg-gray-100">
-        <h2 class="font-bold text-xl">How Deep The Father's Love</h2>
+      {{range .Songs}}
+      <div
+        class="mt-6 hover:bg-gray-100 cursor-pointer"
+        onclick="handleClick(this)"
+      >
+        <div class="flex justify-between">
+          <h2 class="font-bold text-xl">{{.Title}}</h2>
+          <h2>↓</h2>
+        </div>
         <hr class="font-bold mb-0" />
-        <div class="border-2 flex justify-center space-x-8 p-6">
+        {{range .Arrangements}} {{if .IsSelected}}
+        <div
+          class="arrangements border-2 flex justify-center space-x-8 p-6 hidden z-100"
+        >
           <div class="border-2 h-100 w-80 text-center overflow-scroll">
-            <p class="font-bold">Verse 1</p>
-            <p>
-              How deep the Father’s love for us,<br />
-              How vast beyond all measure,<br />
-              That He should give His only Son<br />
-              To make a wretch His treasure.<br />
-              How great the pain of searing loss –<br />
-              The Father turns His face away,<br />
-              As wounds which mar the Chosen One<br />
-              Bring many sons to glory.
-            </p>
-            <p class="font-bold">Verse 2</p>
-            <p>
-              Behold the man upon a cross,<br />
-              My sin upon His shoulders;<br />
-              Ashamed, I hear my mocking voice<br />
-              Call out among the scoffers.<br />
-              It was my sin that held Him there<br />
-              Until it was accomplished;<br />
-              His dying breath has brought me life –<br />
-              I know that it is finished.
-            </p>
+            <p>{{.Lyrics}}</p>
           </div>
-          <div class="">
+          {{end}} {{end}}
+          <div>
             <h2 class="font-bold text-3xl">Arrangements</h2>
-            <input type="radio" id="html" name="fav_language" value="HTML" />
-            <label class="text-xl font-medium" for="One28">One28</label><br />
-            <input type="radio" id="html" name="fav_language" value="HTML" />
-            <label class="text-xl font-medium" for="Worship Together"
-              >Worship Together</label
-            ><br />
-            <input type="radio" id="html" name="fav_language" value="HTML" />
-            <label class="text-xl font-medium" for="MD">MD</label><br />
+            <div>
+              <select id="arrangements" name="arrangements">
+                {{range .Arrangements}} {{if .IsSelected}}
+                <option value="{{.ID}}" selected>{{.Name}}</option>
+                {{else}}
+                <option value="{{.ID}}">{{.Name}}</option>
+                {{end}} {{end}}
+              </select>
+            </div>
           </div>
         </div>
       </div>
+      {{end}}
     </div>
   </body>
 </html>
