--- a/frontend/static/output.css
+++ b/frontend/static/output.css
@@ -14,6 +14,7 @@
     --color-gray-600: oklch(0.446 0.03 256.802);
     --color-gray-700: oklch(0.373 0.034 259.733);
     --color-gray-900: oklch(0.21 0.034 264.665);
+    --color-stone-800: oklch(0.268 0.007 34.298);
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-lg: 32rem;
@@ -193,23 +194,23 @@
   }
 }
 @layer utilities {
-  .absolute {
-    position: absolute;
-  }
   .fixed {
     position: fixed;
   }
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
-  .right-0 {
-    right: calc(var(--spacing) * 0);
+  .z-100 {
+    z-index: 100;
   }
   .m-auto {
     margin: auto;
   }
   .mx-auto {
     margin-inline: auto;
+  }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
   }
   .mt-6 {
     margin-top: calc(var(--spacing) * 6);
@@ -244,6 +245,9 @@
   .h-100 {
     height: calc(var(--spacing) * 100);
   }
+  .max-h-40 {
+    max-height: calc(var(--spacing) * 40);
+  }
   .w-10 {
     width: calc(var(--spacing) * 10);
   }
@@ -261,6 +265,9 @@
   }
   .max-w-full {
     max-width: 100%;
+  }
+  .max-w-lg {
+    max-width: var(--container-lg);
   }
   .cursor-pointer {
     cursor: pointer;
@@ -327,6 +334,9 @@
   }
   .overflow-scroll {
     overflow: scroll;
+  }
+  .overflow-y-auto {
+    overflow-y: auto;
   }
   .scroll-smooth {
     scroll-behavior: smooth;
@@ -477,6 +487,9 @@
   .text-red-600 {
     color: var(--color-red-600);
   }
+  .text-stone-800 {
+    color: var(--color-stone-800);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -485,6 +498,9 @@
   }
   .uppercase {
     text-transform: uppercase;
+  }
+  .italic {
+    font-style: italic;
   }
   .shadow-lg {
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
