--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -16,7 +16,7 @@
     <nav
       class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
     >
-      <h1 class="text-2xl font-bold">LyricLink</h1>
+      <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
       <div class="flex items-center space-x-4">
         <a
           class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer"
