--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -10,7 +10,7 @@
     ></script>
     <script defer src="/static/modal.js"></script>
     <link href="/static/output.css" rel="stylesheet" />
-    <script src="/static/alpine/events.js"></script>
+    <script src="/static/alpine/addEventModal.js"></script>
   </head>
   <body class="p-6">
     <nav
@@ -24,7 +24,9 @@
         >
           Add
         </a>
-        <div class="w-10 h-10 bg-gray-300 rounded-full"></div>
+        <a href="/settings">
+          <div class="w-10 h-10 bg-gray-300 rounded-full"></div>
+        </a>
       </div>
     </nav>
 
