add and display success and error messages

--- a/frontend/views/settings.html
+++ b/frontend/views/settings.html
@@ -62,6 +62,7 @@
           >
             Sync
           </button>
+          <p x-text="successMessage" class="text-green-600">HELLO</p>
           <p x-text="errorMessage" class="text-red-600"></p>
         </div>
       </div>
