add navbar with login

--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -11,7 +11,17 @@
     <script src="/static/alpine/register.js"></script>
     <title>Lyric Link</title>
   </head>
-  <body>
+  <body class="p-6">
+    <nav
+      class="bg-white shadow-md p-5 flex justify-between items-center mb-6 rounded-full"
+    >
+      <a href="/"><h1 class="text-2xl font-bold">Lyriclink</h1></a>
+     
+        <a href="/login">
+          <p class="text-xl font-bold">Login</p>
+        </a>
+      </div>
+    </nav>
     <main>
       <div
         class="m-auto flex flex-col items-center px-8 pt-32 pb-24 text-center text-black-800 md:w-[650px]"
@@ -37,15 +47,15 @@
 
         <div class="space-y-6 pt-16 text-xl">
           <p>
-            LyricLink is a powerful lyric-sharing platform designed to
+            Lyriclink is a powerful lyric-sharing platform designed to
             streamline the way worship leaders share lyrics.
           </p>
           <p>
-            By integrating with Planning Center, LyricLink allows users to
+            By integrating with Planning Center, Lyriclink allows users to
             effortlessly <strong>create</strong>, <strong>format</strong>, and
             <strong>share</strong> lyric sheets via a simple URL. Whether you're
             leading a worship set, coordinating with a band, or organizing
-            lyrics for an event, LyricLink makes distribution seamless and
+            lyrics for an event, Lyriclink makes distribution seamless and
             accessible
           </p>
           <p>
