--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -19,7 +19,7 @@
         class="m-auto px-8 pt-32 text-black-800 md:w-[650px]"
       >
         <div class="font-title space-y-2 text-center">
-          <h2 class="text-6xl font-extrabold">Login with LyricLink</h2>
+          <h2 class="text-6xl font-extrabold">Login with Lyriclink</h2>
         </div>
 
         <div class="space-y-6 pt-16 text-xl">
@@ -36,6 +36,7 @@
               class="w-full p-3 border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-gray-900"
             />
             <input
+              autocomplete="current-password"
               type="password"
               placeholder="Password"
               x-model="password"
