--- a/frontend/static/output.css
+++ b/frontend/static/output.css
@@ -18,6 +18,7 @@
     --color-stone-800: oklch(0.268 0.007 34.298);
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-sm: 24rem;
     --container-lg: 32rem;
     --container-4xl: 56rem;
     --text-xs: 0.75rem;
@@ -233,12 +234,6 @@
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
   }
-  .mb-12 {
-    margin-bottom: calc(var(--spacing) * 12);
-  }
-  .mb-18 {
-    margin-bottom: calc(var(--spacing) * 18);
-  }
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
@@ -269,11 +264,20 @@
   .w-80 {
     width: calc(var(--spacing) * 80);
   }
+  .w-auto {
+    width: auto;
+  }
+  .w-fit {
+    width: fit-content;
+  }
   .w-full {
     width: 100%;
   }
   .w-lg {
     width: var(--container-lg);
+  }
+  .w-sm {
+    width: var(--container-sm);
   }
   .max-w-4xl {
     max-width: var(--container-4xl);
