add live link to event view

--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -21,6 +21,7 @@
     id = event.id;
     date = event.date;
     name = event.name;
+    live_link = event.live_link
     songs = event.songs;
     $store.event.event_id = id;
     console.log(event);
@@ -47,6 +48,13 @@
           x-model="date"
           @change="updateEvent()"
         />
+        <a :href="live_link" target="_blank"
+          ><div
+            class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit"
+          >
+            See Live
+          </div></a
+        >
       </div>
       <div class="space-y-4 mt-6 flex justify-between">
         <h2 class="font-bold text-3xl">Songs</h2>
