--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LyricLink Dashboard</title>
+    <title>Dashboard - Lyriclink</title>
+    <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
