--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -9,7 +9,8 @@
     ></script>
     <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/login.js"></script>
-    <title>Login</title>
+    <title>Login - Lyriclink</title>
+    <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
   </head>
   <body>
     <main>
