--- a/frontend/views/settings.html
+++ b/frontend/views/settings.html
@@ -9,7 +9,8 @@
     ></script>
     <script src="/static/alpine/userSettings.js"></script>
     <link href="/static/output.css" rel="stylesheet" />
-    <title>Settings</title>
+    <title>Settings - Lyriclink</title>
+    <link rel="icon" type="image/x-icon" href="/static/lyriclink.png" />
   </head>
   <body class="p-6">
     <nav
