--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -9,7 +9,8 @@
     ></script>
     <link href="/static/output.css" rel="stylesheet" />
     <script src="/static/alpine/register.js"></script>
-    <title>Lyric Link</title>
+    <title>Lyriclink</title>
+    <link rel="icon" type="image/x-icon" href="/static/lyriclink.png">
   </head>
   <body class="p-6">
     <nav
