--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -41,7 +41,23 @@
     <!-- NAME AND DATE SECTION -->
     <section class="max-w-4xl mx-auto">
       <div class="space-y-4">
-        <h1 class="font-bold text-4xl" x-text="name"></h1>
+        <div class="flex justify-between items-center">
+          <h1 class="font-bold text-4xl" x-text="name"></h1>
+          <div
+            class="rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit"
+          >
+            <a @click="deleteEvent(id)">
+              <svg fill="white" width="20" height="20" viewBox="0 0 16 16">
+                <path
+                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+                />
+                <path
+                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
         <input
           class="border-2 px-2 py-4"
           class="cursor-pointer"
@@ -49,13 +65,11 @@
           x-model="date"
           @change="updateEvent()"
         />
-        <a :href="live_link" target="_blank"
-          ><div
-            class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit"
-          >
-            See Live
-          </div></a
+        <div
+          class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit"
         >
+          <a :href="live_link" target="_blank"> See Live </a>
+        </div>
       </div>
       <div class="space-y-4 mt-6 flex justify-between">
         <h2 class="font-bold text-3xl">Songs</h2>
@@ -82,8 +96,20 @@
           <hr class="font-bold mb-0" />
 
           <div
-            class="arrangements border-2 flex justify-center space-x-8 p-6 hidden z-100"
+            class="arrangements border-2 flex justify-center space-x-8 p-6 hidden z-100 relative"
           >
+            <div
+              class="rounded-xl border border-transparent bg-gray-900 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit absolute px-4 py-2 m-0 top-4 right-4"
+            >
+              <svg fill="white" width="20" height="20" viewBox="0 0 16 16">
+                <path
+                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+                />
+                <path
+                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+                />
+              </svg>
+            </div>
             <template x-for="arrangement in song.arrangements">
               <template x-if="arrangement.isSelected">
                 <div class="border-2 h-100 w-80 text-center overflow-scroll">
