--- a/frontend/views/event.html
+++ b/frontend/views/event.html
@@ -91,6 +91,7 @@
         >
           <div class="flex justify-between">
             <h2 class="font-bold text-xl" x-text="song.title"></h2>
+            <h2 x-text="song.eventArrangementId"></h2>
             <h2>↓</h2>
           </div>
           <hr class="font-bold mb-0" />
@@ -101,14 +102,16 @@
             <div
               class="rounded-xl border border-transparent bg-gray-900 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer w-fit absolute px-4 py-2 m-0 top-4 right-4"
             >
-              <svg fill="white" width="20" height="20" viewBox="0 0 16 16">
-                <path
-                  d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
-                />
-                <path
-                  d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
-                />
-              </svg>
+              <a @click="deleteEventArrangement(song.eventArrangementId)">
+                <svg fill="white" width="20" height="20" viewBox="0 0 16 16">
+                  <path
+                    d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"
+                  />
+                  <path
+                    d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"
+                  />
+                </svg>
+              </a>
             </div>
             <template x-for="arrangement in song.arrangements">
               <template x-if="arrangement.isSelected">
