--- a/frontend/views/dashboard.html
+++ b/frontend/views/dashboard.html
@@ -29,12 +29,6 @@
     >
       <a href="/dashboard"><h1 class="text-2xl font-bold">LyricLink</h1></a>
       <div class="flex items-center space-x-4">
-        <a
-          class="justify-center rounded-xl border border-transparent bg-gray-900 px-4 py-2 text-md tracking-wide text-white transition-colors hover:bg-gray-700 cursor-pointer"
-          id="openModalBtn"
-        >
-          Add
-        </a>
         <a href="/settings">
           <div class="w-10 h-10 bg-gray-300 rounded-full">
             <img
@@ -113,6 +107,13 @@
             </div>
           </a>
         </template>
+        <a id="openModalBtn">
+          <div
+            class="bg-gray-100 p-4 rounded-lg shadow-md cursor-pointer hover:bg-gray-200 mb-4 text-center"
+          >
+            <h2 class="text-lg font-semibold text-gray-600">Add New Event</h2>
+          </div>
+        </a>
       </div>
     </div>
   </body>
