--- a/frontend/views/home.html
+++ b/frontend/views/home.html
@@ -39,7 +39,7 @@
           Get started ↓
         </a>
       </div>
-      <div class="m-auto px-8 pt-24 text-black-800 md:w-[650px]">
+      <div class="m-auto md:px-8 pt-24 text-black-800 md:w-[650px]">
         <div class="font-title space-y-2">
           <h2 class="text-6xl font-extrabold">Simple.</h2>
           <h2 class="text-6xl font-extrabold">Seamless.</h2>
